@@ -37,8 +37,8 @@ object CassandraSparkBuild extends Build {
     demoSettings ++ Seq(libraryDependencies ++= Dependencies.demos), Seq(connector, connectorJava))
 
   def LibraryProject(name: String, dsettings: Seq[Def.Setting[_]], cpd: Seq[ClasspathDep[ProjectReference]] = Seq.empty): Project =
-    Project(name, file(name), settings = defaultSettings ++ dsettings,
-      dependencies = cpd.map(_.project % "compile;runtime->runtime;test->test;it->it,test;provided->provided")) configs (IntegrationTest)
+    Project(name, file(name), settings = defaultSettings ++ sbtAssemblySettings ++ dsettings,
+      dependencies = cpd.map(_.project % "compile;runtime->runtime;test->test;it->it,test;provided->provided")) configs IntegrationTest
 
 }
 
@@ -48,8 +48,6 @@ object Dependencies {
     import Versions._
 
     val akkaActor         = "com.typesafe.akka"       %% "akka-actor"           % Akka           % "provided"                 // ApacheV2
-    val akkaCluster       = "com.typesafe.akka"       %% "akka-cluster"         % Akka                                        // ApacheV2
-    val akkaContrib       = "com.typesafe.akka"       %% "akka-contrib"         % Akka                                        // ApacheV2
     val akkaRemote        = "com.typesafe.akka"       %% "akka-remote"          % Akka           % "provided"                 // ApacheV2
     val akkaSlf4j         = "com.typesafe.akka"       %% "akka-slf4j"           % Akka           % "provided"                 // ApacheV2
     val cassandraThrift   = "org.apache.cassandra"    % "cassandra-thrift"      % Cassandra
@@ -57,14 +55,16 @@ object Dependencies {
     val cassandraDriver   = "com.datastax.cassandra"  % "cassandra-driver-core" % CassandraDriver              withSources()  // ApacheV2
     val commonsLang3      = "org.apache.commons"      % "commons-lang3"         % CommonsLang3                                // ApacheV2
     val config            = "com.typesafe"            % "config"                % Config         % "provided"                 // ApacheV2
-    val guava             = "com.google.guava"        % "guava"                 % Guava                        force()
+    val guava             = "com.google.guava"        % "guava"                 % Guava          % "provided"  force()
     val jodaC             = "org.joda"                % "joda-convert"          % JodaC
     val jodaT             = "joda-time"               % "joda-time"             % JodaT
     val lzf               = "com.ning"                % "compress-lzf"          % Lzf            % "provided"
     val reflect           = "org.scala-lang"          % "scala-reflect"         % Scala
     val slf4jApi          = "org.slf4j"               % "slf4j-api"             % Slf4j          % "provided"                 // MIT
-    val sparkCore         = "org.apache.spark"        %% "spark-core"           % Spark             exclude("com.google.guava", "guava") // ApacheV2
-    val sparkStreaming    = "org.apache.spark"        %% "spark-streaming"      % Spark             exclude("com.google.guava", "guava") // ApacheV2
+    /* To allow spark artifact inclusion in the demo module at runtime, we set 'provided'
+       scope on the connector below, specifically, versus globally here. */
+    val sparkCore         = "org.apache.spark"        %% "spark-core"           % Spark                        exclude("com.google.guava", "guava") // ApacheV2
+    val sparkStreaming    = "org.apache.spark"        %% "spark-streaming"      % Spark                        exclude("com.google.guava", "guava") // ApacheV2
 
     object Metrics {
       val metricsJson     = "com.codahale.metrics"    % "metrics-json"          % MetricsJson    % "provided"
@@ -99,7 +99,9 @@ object Dependencies {
   val connector = testKit ++ metrics ++ logging ++ akka ++ cassandra ++ spark.map(_ % "provided") ++ Seq(
     commonsLang3, config, guava, jodaC, jodaT, lzf, reflect)
 
-  val demos = metrics ++ logging ++ akka ++ cassandra ++ spark ++ Seq(
-    akkaCluster, akkaContrib, commonsLang3, config, guava, jodaC, jodaT, lzf, reflect)
+  val demos = metrics ++ logging ++ akka ++ cassandra ++ spark ++
+    Seq(commonsLang3, config, guava, jodaC, jodaT, lzf, reflect) ++
+    Seq("com.typesafe.akka" %% "akka-cluster" % Versions.Akka,
+     "com.typesafe.akka"    %% "akka-contrib" % Versions.Akka)
 
 }
